Fix: badges' alignment, headline on searchpage

--- a/src/customizations/checkout/_checkout.scss
+++ b/src/customizations/checkout/_checkout.scss
@@ -138,7 +138,7 @@
     }
 
     &__shipping-information-via {
-        padding-bottom: 1rem;
+        padding-bottom: 2rem;
         padding-top: 1rem;
     }
 
@@ -467,7 +467,7 @@
     }
 
     &__place-order {
-        padding: 1rem 2rem 3rem;
+        padding: 1rem 1.5rem 3rem;
         border-bottom: 2px solid $colorAlto;
     }
 
@@ -477,7 +477,7 @@
     }
 
     &__agreements {
-        padding: 2rem 2rem 0;
+        padding: 2rem 1.5rem 0;
         font-size: 1.2rem;
         border-top: 2px solid $colorAlto;
 
